--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <!-- Hello strangers ! If you are insterested in my subject, contact me right now. -->
 <head>
     <meta charset="utf-8">
-    <meta name="keywords" content="Yang Zhou, 周漾, yangzhou, VCC, SZU">
+    <meta name="keywords" content="Guoqing Yang, 杨国庆, guoqingyang, Guangming Lab.">
     <meat name="description" content="Yang Zhou's home page">
     <link rel="stylesheet" href="./css/yangdoc.css" type="text/css">
     <title>Yang Zhou</title>
