--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="keywords" content="Guoqing Yang, 杨国庆, guoqingyang, Guangming Lab.">
-    <meat name="description" content="Yang Zhou's home page">
+    <meat name="description" content="Guoqing Yang's home page">
     <link rel="stylesheet" href="./css/yangdoc.css" type="text/css">
-    <title>Yang Zhou</title>
+    <title>Guoqing Yang</title>
     <link rel="shortcut icon" href="image/hust.ico"  type="image/x-icon">
     <link rel="icon" href="image/hust.ico" type="image/x-icon">
 </head>
@@ -17,22 +17,22 @@
                 <tr>
                     <td width="600">
                         <div id="toptitle">
-                            <h1>Yang Zhou &nbsp; 周漾</h1>
+                            <h1>Guoqing Yang &nbsp; 杨国庆</h1>
                             <h1></h1>
                         </div>
-                        <h3>Assistant Professor</h3>
+                        <h3>Associate Researcher</h3>
                         <table>
                             <tbody>
                                 <tr>
                                     <th>Office:</th>
-                                    <td>Room 810-A, Building L6, South Campus of Shenzhen University</td>
+                                    <td>Room 806, Building L6, South Campus of Shenzhen University</td>
                                 </tr>
                                 <tr>
                                     <th>Tel:</th>
-                                    <td>+86-0755-8695-8774, +86-159-9744-7904</td>
+                                    <td>+86-175-4309-3216</td>
                                 <tr>
                                     <th>Email:</th>
-                                    <td>zhouyangvcc [@] szu.edu.cn or gmail.com</td>
+                                    <td>yangguoqing2020 [@] gmail.com</td>
                                 </tr>
                             </tbody>
                         </table>
