--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                                 <tr>
                                     <th>Office:</th>
                                     <td>Room 806, Building L6, South Campus of Shenzhen University</td>
+				    <td>Room , Guangming Lab.</td>
                                 </tr>
                                 <tr>
                                     <th>Tel:</th>
@@ -43,36 +44,30 @@
             </tbody>
         </table>
         <h2>Biography</h2>
-			<p>I am currently an Assistant Professor at <a href="http://csse.szu.edu.cn/cn/index">College of Computer Science & Software Engineering</a>, <a href="https://www.szu.edu.cn/">Shenzhen University (SZU)</a>. 
-			I received my Ph.D. degree in <a href="http://rsgis.whu.edu.cn/">Photogrammetry and Remote Sensing</a> from <a href="https://www.whu.edu.cn/"> Wuhan University</a> in 2013. After that I did a postdoc research working with <a href="http://vcc.tech/~huihuang">Prof. Hui Huang</a>, who helped me start my research career in computer graphics. 
-			Before joining SZU, I was a software engineer of <a href="http://www.dji.com">DJI Innovation</a> and then an assistant professor of <a href="http://www.hust.edu.cn/">Huazhong University of Science and Technology (HUST)</a>.
-			My research interest generally lies in computer graphics, including texture synthesis, shape analysis and 3D modeling. Besides graphics, I'm also interested in computer vision and deep learning techniques, especially the deep generative models. 
-			I have several publication records in the top conferences and journals of both graphics and vision, including SIGGRAPH, SIGGRAPH Asia, Eurographics, CVPR and NeurIPS.</p>
+			<p>I am currently an Associate Researcher at <a href="https://www.gml.ac.cn//">Guangming Laboratory</a>. 
+			I received my Ph.D. degree in Optical Engineering from <a href="http://www.ciomp.ac.cn/"> Changchun Institute of Optics, Fine Mechanics and Physics (CIOMP), Chinese Academy of Sciences</a> in 2018. After that I was a engineer of CAST and then did a postdoc research working with <a href="http://vcc.tech/~huihuang">Prof. Hui Huang</a>. 
+			My research interest generally lies in computer vision and graphics, especially in the area of urban scene understanding.</p>
 			<table>
                 <tbody>
+		    <tr>
+			<th>2023~present</th>
+                        <td>Associate Researcher, at <a href="https://www.gml.ac.cn//">Guangming Laboratory</a></td>
+	            </tr>
                     <tr>
-                        <th>2019~present</th>
-                        <td>Assistant Professor, at <a href="http://csse.szu.edu.cn/cn/index">CCSSE</a>, <a href="https://www.szu.edu.cn/ ">SZU</a></td>
+                        <th>2020~2023</th>
+                        <td>Post Doc, at <a href="http://csse.szu.edu.cn/cn/index">CCSSE</a>, <a href="https://www.szu.edu.cn/ ">SZU</a></td>
                     </tr>
                     <tr>
-                        <th>2017~2019</th>
-                        <td>Assistant Professor, at <a href="http://ei.hust.edu.cn/">EIC</a>, <a href="http://www.hust.edu.cn/">HUST</a></td>
+                        <th>2018~2020</th>
+                        <td>Engineer, at CAST</a></td>
+                    </tr>
+	            <tr>
+                        <th>2013~2018</th>
+                        <td>Ph.D. in Optical Engineering, <a href="http://www.ciomp.ac.cn/"> Changchun Institute of Optics, Fine Mechanics and Physics (CIOMP), Chinese Academy of Sciences</a></td>
                     </tr>
                     <tr>
-                        <th>2016~2017</th>
-                        <td>Software Engineer, at <a href="http://www.dji.com">DJI Innovation</a></td>
-                    </tr>
-                    <tr>
-                        <th>2014~2016</th>
-                        <td>Post Doc. in Computer Graphics, at <a href=" http://www.siat.ac.cn/">SIAT, Shenzhen</a></td>
-                    </tr>
-					<tr>
-                        <th>2007~2013</th>
-                        <td>Ph.D. in Photogrammetry and Remote Sensing, <a href="https://www.whu.edu.cn/"> Wuhan University</a></td>
-                    </tr>
-                    <tr>
-                        <th>2003~2007</th>
-                        <td>B.S. in Photogrammetry, <a href="https://www.whu.edu.cn/"> Wuhan University</a></td>
+                        <th>2009~2013</th>
+                        <td>B.S. in Theoretical Physics, <a href="https://www.lzu.edu.cn/"> Lanzhou University</a></td>
                     </tr>
                 </tbody>
 			</table>
