--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </td>
                     <td style="padding:30px">
                         <b>Speckle Pattern Sequential Extraction Metric for Estimating the Focus Spot Size on a Remote Diffuse Target</b> <br />
-						<em>Applied Sciences 2021</em> <br />
+						<em>Applied Optics 2018</em> <br />
 						Zhan Yu, Yuanyang Li, Lisheng Liu, Jin Guo*, Tingfeng Wang, <b>Guoqing Yang</b> <br />
                         
                     </td>
