--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                                     <td>+86-175-4309-3216</td>
                                 <tr>
                                     <th>Email:</th>
-                                    <td>yangguoqing2020 [@] gmail.com</td>
+                                    <td>yangguoqing [@] gml.ac.cn</td>
                                 </tr>
                             </tbody>
                         </table>
